<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <Button
        android:id="@+id/whiteList"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/whiteList"
        android:textColor="#ffff00"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <Button
        android:id="@+id/exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:textColor="#ffff00" />

    <Button
        android:id="@+id/linkWatchList"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/linkWatchList"
        android:textColor="#ffff00"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/blackList"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/blackList"
        android:layout_marginTop="5dp"
        android:textColor="#ffff00"
        android:layout_below="@+id/exit"
        android:layout_alignEnd="@+id/whiteList"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/sourceWatchList"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/sourceWatchList"
        android:textColor="#ffff00"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/linkWatchList"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/uaLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/blackList"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/ua"
        android:gravity="center_vertical|start"
        android:textColor="#EFB842"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/ua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/uaLabel"
        android:layout_alignBottom="@+id/uaLabel"
        android:layout_below="@+id/urlLabel"
        android:layout_toEndOf="@+id/uaLabel"
        android:layout_marginStart="4dp"
        android:background="#090909"
        android:maxLines="2"
        android:text="@string/spaceCrawler"
        android:textColor="#CEE66B"
        android:textSize="17sp" />

    <CheckBox
        android:id="@+id/crawlExternalOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/uaLabel"
        android:layout_alignParentStart="true"
        android:text="@string/crawlExternal"
        android:textColor="#EFB842"
        android:textSize="17sp" />

</RelativeLayout>