<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000" >

    <Button
        android:id="@+id/start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:text="@string/start"
        android:textColor="#ffff00" />

    <Button
        android:id="@+id/exit"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:textColor="#ffff00" />

    <Button
        android:id="@+id/options"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/options"
        android:textColor="#ffff00"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/urlLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/start"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:text="@string/url"
        android:gravity="center_vertical|start"
        android:textColor="#EFB842"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/url"
        android:inputType="textUri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/urlLabel"
        android:layout_alignBottom="@+id/urlLabel"
        android:layout_toEndOf="@+id/urlLabel"
        android:layout_marginStart="4dp"
        android:background="#090909"
        android:maxLines="2"
        android:text="@string/nis"
        android:textColor="#78b2c6"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/finishedLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/urlLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/finishedLabel"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/internalPagesLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/finishedLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/internalLinks"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/externalPagesLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/internalPagesLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/externalLinks"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/linkWatchListLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/externalPagesLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/linkWatchListLabel"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/sourceWatchListLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/linkWatchListLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/sourceWatchListLabel"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/finishedLabel"
        android:layout_alignBottom="@+id/finishedLabel"
        android:layout_toEndOf="@+id/finishedLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#58a691"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/internalPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/internalPagesLabel"
        android:layout_alignBottom="@+id/internalPagesLabel"
        android:layout_toEndOf="@+id/internalPagesLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#d49958"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/externalPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/externalPagesLabel"
        android:layout_alignBottom="@+id/externalPagesLabel"
        android:layout_toEndOf="@+id/externalPagesLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#a15d39"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/linkWatchListCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/linkWatchListLabel"
        android:layout_alignBottom="@+id/linkWatchListLabel"
        android:layout_toEndOf="@+id/linkWatchListLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#479f3a"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/sourceWatchListCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sourceWatchListLabel"
        android:layout_alignBottom="@+id/sourceWatchListLabel"
        android:layout_toEndOf="@+id/sourceWatchListLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#3a9f7c"
        android:textSize="17sp" />

    <Button
        android:id="@+id/finishedDomains"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:background="@drawable/button"
        android:text="@string/viewFinished"
        android:textColor="#ffff00"
        android:layout_above="@+id/internalPagesLabel"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/viewInternalPages"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/internalPagesLabel"
        android:layout_alignBottom="@+id/internalPagesLabel"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:text="@string/viewInternal"
        android:textColor="#ffff00" />

    <Button
        android:id="@+id/viewExternalPages"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/externalPages"
        android:layout_alignTop="@+id/externalPages"
        android:layout_alignParentEnd="true"
        android:background="@drawable/button"
        android:text="@string/viewExternal"
        android:textColor="#ffff00" />

    <Button
        android:id="@+id/viewResults"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/viewResults"
        android:textColor="#ffff00"
        android:layout_alignTop="@+id/linkWatchListLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/linkWatchListCount" />

    <Button
        android:id="@+id/viewResults2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/viewResults"
        android:textColor="#ffff00"
        android:layout_alignTop="@+id/sourceWatchListLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/sourceWatchListLabel" />

    <Button
        android:id="@+id/viewErrors"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/viewErrors"
        android:textColor="#ffff00"
        android:layout_alignTop="@+id/errorLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/errorLabel" />

    <TextView
        android:id="@+id/errorLabel"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sourceWatchListLabel"
        android:layout_marginTop="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/errorLabel"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/errorLabel"
        android:layout_alignBottom="@+id/errorLabel"
        android:layout_toEndOf="@+id/errorLabel"
        android:maxLines="1"
        android:layout_marginStart="4dp"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#9f3c3a"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/pagesLabel"
        android:layout_width="wrap_content"
        android:gravity="center_vertical|start"
        android:layout_below="@+id/errorLabel"
        android:layout_centerInParent="true"
        android:text="@string/totalPages"
        android:textColor="#EFB842"
        android:textSize="17sp"
        android:layout_height="30dp" />

    <TextView
        android:id="@+id/pages"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignTop="@+id/pagesLabel"
        android:layout_alignBottom="@+id/pagesLabel"
        android:layout_toEndOf="@+id/pagesLabel"
        android:maxLines="1"
        android:gravity="center_vertical|start"
        android:text="@string/zero"
        android:textColor="#9e58a6"
        android:textSize="17sp"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pagesLabel"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="4dp"
        android:background="#040404"
        android:gravity="bottom"
        android:textColor="#83A2F7"
        android:textSize="14sp" />

</RelativeLayout>